--- a/app/src/main/res/layout/activity_intent.xml
+++ b/app/src/main/res/layout/activity_intent.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:textAllCaps="false"
         android:text="@string/actionMoveToActivity"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="16dp"
+        android:textAllCaps="false"
         android:text="@string/actionMoveToActivityWithData"
         app:layout_constraintTop_toBottomOf="@id/btnMoveToActivity"
         app:layout_constraintStart_toStartOf="@+id/btnMoveToActivity"
@@ -34,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="16dp"
+        android:textAllCaps="false"
         android:text="@string/actionDialNumber"
         app:layout_constraintTop_toBottomOf="@+id/btnMoveToActivityWithData"
         app:layout_constraintStart_toStartOf="parent"
