Adding action dial a number button.

--- a/app/src/main/res/layout/activity_intent.xml
+++ b/app/src/main/res/layout/activity_intent.xml
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="@+id/btnMoveToActivity"/>
 
     <Button
-        android:id="@+id/btDialANumber"
+        android:id="@+id/btnDialANumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
