--- a/app/src/main/res/layout/activity_view_view_group.xml
+++ b/app/src/main/res/layout/activity_view_view_group.xml
@@ -26,8 +26,7 @@
                 android:contentDescription="@string/content_image_pixel" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/TextContent.Small.White"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/white"
                 android:layout_gravity="bottom"
@@ -43,9 +42,8 @@
         </FrameLayout>
 
         <TextView
+            style="@style/TextContent"
             android:id="@+id/tvPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
@@ -54,17 +52,15 @@
             app:layout_constraintTop_toBottomOf="@id/flImageInfo"/>
 
         <TextView
+            style="@style/TextContent.Subtitle"
             android:id="@+id/tvStock"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/stock"
-            app:layout_constraintStart_toStartOf="@id/tvPrice"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvPrice"/>
 
         <TextView
+            style="@style/TextContent"
             android:id="@+id/tvContentInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
             android:text="@string/content_text"
@@ -72,26 +68,23 @@
             app:layout_constraintStart_toStartOf="@id/tvPrice"/>
 
         <TextView
-            android:id="@+id/tvSpesification"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextContent.Subtitle"
+            android:id="@+id/tvSpecification"
             android:layout_marginTop="16dp"
             android:text="@string/specification"
-            app:layout_constraintStart_toStartOf="@id/tvPrice"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvContentInfo"/>
 
         <TextView
+            style="@style/TextSpec.Field"
             android:id="@+id/tvDisplay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/display"
-            app:layout_constraintTop_toBottomOf="@id/tvSpesification"
+            app:layout_constraintTop_toBottomOf="@id/tvSpecification"
             app:layout_constraintStart_toStartOf="@id/tvPrice"/>
 
         <TextView
+            style="@style/TextSpec.Value"
             android:id="@+id/tvDisplayInfo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:text="@string/content_specs_display"
@@ -100,18 +93,16 @@
             app:layout_constraintTop_toTopOf="@id/tvDisplay"/>
 
         <TextView
+            style="@style/TextSpec.Field"
             android:id="@+id/tvSize"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/size"
             app:layout_constraintTop_toBottomOf="@id/tvDisplayInfo"
             app:layout_constraintStart_toStartOf="@id/tvPrice"/>
 
         <TextView
+            style="@style/TextSpec.Value"
             android:id="@+id/tvSizeInfo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:text="@string/content_specs_size"
             android:layout_marginEnd="16dp"
             app:layout_constraintStart_toStartOf="@id/tvDisplayInfo"
@@ -119,18 +110,16 @@
             app:layout_constraintTop_toTopOf="@id/tvSize"/>
 
         <TextView
+            style="@style/TextSpec.Field"
             android:id="@+id/tvBattery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/battery"
             app:layout_constraintTop_toBottomOf="@id/tvSizeInfo"
             app:layout_constraintStart_toStartOf="@id/tvPrice"/>
 
         <TextView
+            style="@style/TextSpec.Value"
             android:id="@+id/tvBatteryInfo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="@string/content_specs_battery"
             app:layout_constraintStart_toStartOf="@id/tvSizeInfo"
@@ -138,13 +127,12 @@
             app:layout_constraintTop_toTopOf="@id/tvBattery"/>
 
         <TextView
+            style="@style/TextContent.Subtitle"
             android:id="@+id/tvSeller"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/seller"
             app:layout_constraintTop_toBottomOf="@id/tvBatteryInfo"
-            app:layout_constraintStart_toStartOf="@id/tvPrice"/>
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgSeller"
@@ -156,9 +144,8 @@
             app:layout_constraintStart_toStartOf="@id/tvPrice"/>
 
         <TextView
+            style="@style/TextContent.Seller"
             android:id="@+id/tvSellerName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@string/my_name"
             app:layout_constraintTop_toTopOf="@id/imgSeller"
@@ -166,12 +153,13 @@
             app:layout_constraintStart_toEndOf="@id/imgSeller"/>
 
         <Button
+            style="@style/ButtonGeneral"
             android:id="@+id/btnBuy"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:text="@string/buy"
             android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgSeller"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
