--- a/app/src/main/res/layout/item_list_hero.xml
+++ b/app/src/main/res/layout/item_list_hero.xml
@@ -5,6 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:padding="16dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
